WEBREQUEST-15782 resources alignment and fixes

--- a/src/client/app/sass/_hero.scss
+++ b/src/client/app/sass/_hero.scss
@@ -1,6 +1,5 @@
 // Hero Section
 .hero {
-  //border:1px orange dashed;
   margin-top: 80px;
   position: relative;
   color: #fff;
@@ -23,6 +22,7 @@
         padding-bottom: 0;
 
         .hero__header--xs {
+          font-size: $font-size-h1;
           line-height: 32px;
           text-align: left;
         }
